# ipaaca

./: .gitignore  build.xml  resolve.sh
cpp/: build.properties  build.xml  ivy.xml
cpp/include/: ipaaca.h
cpp/src/: Makefile  ipaaca-test-main.cc  ipaaca.cc  ipaaca.h
cpp/test/src/: Makefile  rsb.conf
docs/: .gitignore  ipaacaCpp.Doxyfile
ipaacalib/: build.xml
ipaacalib/cpp/: CMakeLists.txt  build-windows.bat  build.properties  build.xml  ipaaca.pb.cc  ipaaca.pb.h  ipaacaConfig.cmake.in  ivy.xml
ipaacalib/cpp/CMakeModules/: FindBoost.cmake
ipaacalib/cpp/examples/: CMakeLists.txt
ipaacalib/cpp/examples/src/: example-component.cc
ipaacalib/cpp/include/ipaaca/: ipaaca-buffers.h  ipaaca-definitions.h  ipaaca-forwards.h  ipaaca-internal.h  ipaaca-ius.h  ipaaca-json.h  ipaaca-locking.h  ipaaca-payload.h  ipaaca.h
ipaacalib/cpp/include/ipaaca/util/: notifier.h
ipaacalib/cpp/include/rapidjson/: LICENSE-rapidjson.txt
ipaacalib/cpp/src/: .gitignore  Makefile  Makefile~  ipaaca-buffers.cc  ipaaca-cmdline-parser.cc  ipaaca-fake.cc  ipaaca-internal.cc  ipaaca-iuinterface.cc  ipaaca-ius.cc  ipaaca-json.cc  ipaaca-links.cc  ipaaca-locking.cc  ipaaca-payload.cc  ipaaca-receiver  ipaaca-sender  ipaaca-string-utils.cc  ipaaca-test-main.cc  ipaaca-tester.cc  ipaaca.cc
ipaacalib/cpp/src/util/: notifier.cc
ipaacalib/cpp/test/: CMakeLists.txt
ipaacalib/cpp/test/src/: .gitignore  Makefile  Makefile~  ipaaca-test-main.cc  ipaaca-test-resend.cc  testipaaca.cc  textsender.cc
ipaacalib/dev-notes/: handler3.py  ipaaca3.py  notes3.txt  test.py
ipaacalib/java/: .gitignore  build.properties  build.xml  ivy.xml  manifest.mf
ipaacalib/java/src/ipaaca/: AbstractIU.java  Buffer.java  BufferConfiguration.java  BufferConfigurationBuilder.java  HandlerFunctor.java  IUAccessMode.java  IUCommittedException.java  IUConverter.java  IUEventHandler.java  IUEventType.java  IUPublishedException.java  IUReadOnlyException.java  IUResendFailedException.java  IURetractedException.java  IUStore.java  IUUpdateFailedException.java  Info.java  Initializer.java  InputBuffer.java  IntConverter.java  LinkUpdateConverter.java  LocalIU.java  LocalMessageIU.java  OutputBuffer.java  Payload.java  PayloadConverter.java  RemoteMessageIU.java  RemotePushIU.java
ipaacalib/java/src/ipaaca/util/: Blackboard.java  BlackboardClient.java  BlackboardUpdateListener.java  ComponentNotifier.java  IpaacaLogger.java
ipaacalib/java/src/ipaaca/util/communication/: FutureIU.java  FutureIUs.java
ipaacalib/java/src/ipaacademo/: PythonCall.java  TestListener.java  TextPrinter.java
ipaacalib/java/test/: ivy.xml
ipaacalib/java/test/src/ipaaca/: ComponentMessageCommunicationIntegrationTest.java  ComponentNotifierIntegrationTest.java  ComponentNotifierTest.java  ComponentPushCommunicationIntegrationTest.java  CountingEventHandler.java  IUTestUtil.java  InputBufferTest.java  IuConverterTest.java  JavaPythonTest.java  LocalIUTest.java  StoringEventHandler.java
ipaacalib/java/test/src/ipaaca/util/: BlackboardIntegrationTest.java  ComponentNotifierIntegrationTest.java  ComponentNotifierTest.java
ipaacalib/java/test/src/ipaaca/util/communication/: FutureIUTest.java  FutureIUsTest.java
ipaacalib/proto/: ipaaca.proto  ipaaca3.proto
ipaacalib/python/: build.properties  build.xml  ivy.xml
ipaacalib/python/src/: informer.py  ipaaca.py  listener.py  notifier.py
ipaacalib/python/src/ipaaca/: __init__.py  buffer.py  converter.py  defaults.py  exception.py  iu.py  misc.py  payload.py
ipaacalib/python/src/ipaaca/util/: __init__.py  logger.py  notifier.py  timesync.py
ipaacalib/python/test/: ivy.xml
ipaacalib/python/test/src/: ipaacaspam.py  testipaaca.py  testnotifier.py  textsender.py  wordsender.py
ipaacasoa/: build.xml
ipaacasoa/cpp/: CMakeLists.txt  build.properties  build.xml  ivy.xml
ipaacasoa/cpp/include/ipaaca-soa/: categories_components_lexicon.h
ipaacatools/: build.properties  build.xml  ivy.xml
ipaacatools/scripts/: ipaaca-catlog  ipaaca-iu-injector  ipaaca-iu-injector.py  ipaaca-iu-sniffer  ipaaca-iu-sniffer.py  ipaaca-logger  ipaaca-ping  ipaaca-pong  ipaaca-session-record  ipaaca-session-replay  ipaaca-socket-hub  start-spread-local
java/: .gitignore  build.properties  build.xml  ivy.xml  manifest.mf
java/src/ipaaca/: AbstractIU.java  Buffer.java  HandlerFunctor.java  IUAccessMode.java  IUCommittedException.java  IUConverter.java  IUEventHandler.java  IUEventType.java  IUPublishedException.java  IUReadOnlyException.java  IUStore.java  IUUpdateFailedException.java  Info.java  Initializer.java  InputBuffer.java  IntConverter.java  Ipaaca.java  LinkUpdateConverter.java  LocalIU.java  OutputBuffer.java  Payload.java  PayloadConverter.java  RemotePushIU.java
java/src/ipaacademo/: PythonCall.java  TextPrinter.java
java/test/: findbugs.xml  ivy.xml
java/test/src/ipaaca/: ComponentCommunicationIntegrationTest.java  IUTestUtil.java  InputBufferTest.java  IuConverterTest.java  JavaPythonTest.java  LocalIUTest.java
proto/: build.properties  build.xml  ipaaca.proto  ivy.xml
python/: .gitignore  Makefile  build.properties  build.xml  ivy.xml
python/src/: informer.py  ipaaca.py  listener.py  run.py  testipaaca.py
python/test/: ivy.xml  testipaaca.py
python/test/src/: ipaacaspam.py  rsb.cfg  testipaaca.py  textsender.py  wordsender.py
